[gd_scene load_steps=11 format=3 uid="uid://cfiq1uqcr8j4k"]

[ext_resource type="Script" path="res://src/Scenes/Interior/door.gd" id="1_1w0xc"]
[ext_resource type="Texture2D" uid="uid://g54g4yadagp1" path="res://Assets/Sprites/Enter_Sign.png" id="2_81vle"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1pa1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_138bt"]
atlas = ExtResource("2_81vle")
region = Rect2(0, 0, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_oa38f"]
atlas = ExtResource("2_81vle")
region = Rect2(32, 0, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_gunqq"]
atlas = ExtResource("2_81vle")
region = Rect2(64, 0, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny1od"]
atlas = ExtResource("2_81vle")
region = Rect2(96, 0, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_8imif"]
atlas = ExtResource("2_81vle")
region = Rect2(128, 0, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs2au"]
atlas = ExtResource("2_81vle")
region = Rect2(160, 0, 32, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_ltdu3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_138bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oa38f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gunqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny1od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8imif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs2au")
}],
"loop": true,
"name": &"float",
"speed": 14.0
}]

[node name="Door" type="Area2D"]
script = ExtResource("1_1w0xc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_l1pa1")

[node name="EnterSign" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -34)
sprite_frames = SubResource("SpriteFrames_ltdu3")
animation = &"float"
frame_progress = 0.347111

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
